# ChangeLog for dev-perl/Tie-Array-Sorted
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Tie-Array-Sorted/ChangeLog,v 1.15 2006/10/20 23:11:00 agriffis Exp $

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org>
  Tie-Array-Sorted-1.4.1.ebuild:
  Mark 1.4.1 stable on ia64

  15 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -Tie-Array-Sorted-1.2.ebuild, Tie-Array-Sorted-1.4.1.ebuild:
  Marking amd64, sparc stable; cleaning up ebuilds

*Tie-Array-Sorted-1.4.1 (20 Aug 2006)

  20 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  +Tie-Array-Sorted-1.4.1.ebuild:
  Version bump

  18 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Tie-Array-Sorted-1.4.ebuild:
  Marking amd64 stable

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Tie-Array-Sorted-1.2.ebuild, Tie-Array-Sorted-1.3.ebuild,
  Tie-Array-Sorted-1.4.ebuild:
  Adding perl dep; fixed header; fixed DEPEND

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  Tie-Array-Sorted-1.4.ebuild:
  Mark 1.4 stable on ia64

  01 Jul 2006; Michael Cummings <mcummings@gentoo.org>
  Tie-Array-Sorted-1.4.ebuild:
  Keywording ~amd64

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  Tie-Array-Sorted-1.4.ebuild:
  Marking sparc stable

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org>
  Tie-Array-Sorted-1.4.ebuild:
  Mark 1.4 ~ia64

*Tie-Array-Sorted-1.4 (13 Jan 2006)

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  +Tie-Array-Sorted-1.4.ebuild:
  Version bump upstream

  05 Aug 2005; David Holm <dholm@gentoo.org> Tie-Array-Sorted-1.3.ebuild:
  Added to ~ppc.

  17 May 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  Tie-Array-Sorted-1.3.ebuild:
  Stable on sparc

  22 Jan 2005; Michael Cummings <mcummings@gentoo.org>
  Tie-Array-Sorted-1.3.ebuild:
  Unmasking for x86

*Tie-Array-Sorted-1.3 (28 Oct 2004)

  28 Oct 2004; Michael Cummings <mcummings@gentoo.org>
  +Tie-Array-Sorted-1.3.ebuild:
  New version on cpan
