@@ -1,11 +1,11 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Tie-Array-Sorted/Tie-Array-Sorted-1.3.ebuild,v 1.5 2006/08/06 00:33:40 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Tie-Array-Sorted/Tie-Array-Sorted-1.3.ebuild,v 1.6 2007/01/19 17:03:38 mcummings Exp $
 
 inherit perl-module
 
 DESCRIPTION="An array which is kept sorted"
-HOMEPAGE="http://search.cpan.org/~tmtm/${P}/"
+HOMEPAGE="http://search.cpan.org/~tmtm/"
 SRC_URI="mirror://cpan/authors/id/T/TM/TMTM/${P}.tar.gz"
 
 LICENSE="Artistic"
@@ -17,4 +17,3 @@ SRC_TEST="do"
 
 
 DEPEND="dev-lang/perl"
-RDEPEND="${DEPEND}"
