@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Tie-Array-Sorted
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Tie-Array-Sorted/ChangeLog,v 1.15 2006/10/20 23:11:00 agriffis Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Tie-Array-Sorted/ChangeLog,v 1.16 2007/01/19 17:03:38 mcummings Exp $
+
+  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
+  Tie-Array-Sorted-1.3.ebuild, -Tie-Array-Sorted-1.4.ebuild:
+  Ebuild maintenance
 
   20 Oct 2006; Aron Griffis <agriffis@gentoo.org>
   Tie-Array-Sorted-1.4.1.ebuild:
